// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssessmentReportStepListTest renders fail 1`] = `
<div>
  <div
    className="step-details"
  >
    <AssessmentReportStepHeader
      defaultMessageComponent={null}
      deps={
        {
          "outcomeTypeSemanticsFromTestStatus": {
            "stub": "outcomeTypeSemanticsFromTestStatus",
          },
        }
      }
      header={
        {
          "description": null,
          "displayName": "Step2A",
          "guidanceLinks": [],
          "requirementType": "assisted",
        }
      }
      instanceCount={1}
      status={2}
    />
    <ReportInstanceList
      instances={
        [
          {
            "props": [
              {
                "key": "Path",
                "value": "target1",
              },
              {
                "key": "Snippet",
                "value": "someHtml",
              },
            ],
          },
        ]
      }
    />
  </div>
  <div
    className="step-details"
  >
    <AssessmentReportStepHeader
      defaultMessageComponent={null}
      deps={
        {
          "outcomeTypeSemanticsFromTestStatus": {
            "stub": "outcomeTypeSemanticsFromTestStatus",
          },
        }
      }
      header={
        {
          "description": null,
          "displayName": "Step4A",
          "guidanceLinks": [],
          "requirementType": "manual",
        }
      }
      instanceCount={1}
      status={2}
    />
    <ReportInstanceList
      instances={
        [
          {
            "props": [
              {
                "key": "Comment",
                "value": "comment",
              },
            ],
          },
        ]
      }
    />
  </div>
</div>
`;

exports[`AssessmentReportStepListTest renders incomplete 1`] = `
<div>
  <div
    className="step-details"
  >
    <AssessmentReportStepHeader
      defaultMessageComponent={null}
      deps={
        {
          "outcomeTypeSemanticsFromTestStatus": {
            "stub": "outcomeTypeSemanticsFromTestStatus",
          },
        }
      }
      header={
        {
          "description": null,
          "displayName": "Step3A",
          "guidanceLinks": [],
          "requirementType": "assisted",
        }
      }
      instanceCount={1}
      status={1}
    />
  </div>
</div>
`;

exports[`AssessmentReportStepListTest renders pass 1`] = `
<div>
  <div
    className="step-details"
  >
    <AssessmentReportStepHeader
      defaultMessageComponent={null}
      deps={
        {
          "outcomeTypeSemanticsFromTestStatus": {
            "stub": "outcomeTypeSemanticsFromTestStatus",
          },
        }
      }
      header={
        {
          "description": null,
          "displayName": "Step1A",
          "guidanceLinks": [
            {
              "href": "link1A",
              "text": "link1A",
            },
          ],
          "requirementType": "assisted",
        }
      }
      instanceCount={1}
      status={0}
    />
  </div>
</div>
`;

exports[`AssessmentReportStepListTest renders pass without instances when showInstances is false 1`] = `
<div>
  <div
    className="step-details"
  >
    <AssessmentReportStepHeader
      defaultMessageComponent={null}
      deps={
        {
          "outcomeTypeSemanticsFromTestStatus": {
            "stub": "outcomeTypeSemanticsFromTestStatus",
          },
        }
      }
      header={
        {
          "description": null,
          "displayName": "Step1A",
          "guidanceLinks": [
            {
              "href": "link1A",
              "text": "link1A",
            },
          ],
          "requirementType": "assisted",
        }
      }
      instanceCount={1}
      status={0}
    />
  </div>
</div>
`;
